packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
@use '@carbon/layout';
@use '@carbon/type';
@use '@openmrs/esm-styleguide/src/vars' as *;

.submit {
  width: 15.625rem;
}

.submit:hover {
  cursor: pointer;
}

.cancelButton {
  width: 11.688rem;
}

.submitButton {
  margin-bottom: layout.$spacing-05;
  width: 11.688rem;
  display: block;
}

.infoGrid {
  width: 100%;
  padding-left: layout.$spacing-07;
  margin-bottom: 40vh;
  margin-top: layout.$spacing-05;
  max-width: 50rem;
}

:global(.omrs-breakpoint-lt-desktop) {
  .infoGrid {
    max-width: unset;
  }
}

.label01 {
  @include type.type-style('label-01');
  margin-top: layout.$spacing-05;
  margin-bottom: layout.$spacing-05;
  color: $ui-05;
}

.space05 {
  margin: layout.$spacing-05 0;
}

.formContainer {
  display: flex;
  width: 100%;
  align-items: flex-start;
  height: calc(100vh - layout.$spacing-09); // subtract nav height
  overflow-y: auto;
}

.stickyColumn {
  position: sticky;
  margin-top: layout.$spacing-05;
  // layout.$spacing-09 for the nav height and layout.$spacing-05 for top margin
  top: layout.$spacing-10;
}

.touchTarget a:active {
  color: $color-gray-100;
}

.linkName {
  color: $color-gray-70;
  line-height: 1.38;
  font-size: layout.$spacing-05;
  font-weight: 600;

  &:active {
    text-decoration: none;
    color: $color-gray-100;
  }

  &:hover {
    text-decoration: none;
    color: $color-gray-100;
    cursor: pointer;
  }
}

.spinner {
  min-height: layout.$spacing-05;
  width: max-content;

  :global(.cds--inline-loading__text) {
    @include type.type-style('body-01');
  }
}

// Overriding styles for RTL support
html[dir='rtl'] {
  .linkName {
    & > svg {
      transform: scale(-1, 1);
    }
  }

  .infoGrid {
    padding-left: unset;
    padding-right: layout.$spacing-07;
  }
}

